Implement API routes for getting and adding Players
