# contracts/createPlayerRequest.go
@@ -1,0 +1,5 @@
+package contracts
+
+type CreatePlayerRequest struct {
+	Name string `json:"name"`
+}
